fix: word wrapping in posts.html

--- a/static/style.css
+++ b/static/style.css
@@ -47,7 +47,7 @@ nav {
 }
 
 a {
-    color: white;
+    color:#5990ac;
     text-decoration: none;
 
     /* font-size: 1.4rem; */
@@ -55,11 +55,12 @@ a {
 }
 
 a:hover {
-    color:#5990ac;
+    /* color:#5990ac; */
     text-decoration: underline;
 }
 
 a:active {
+    /* color: white; */
     text-decoration: none;
 }
 
@@ -82,7 +83,14 @@ h4 {font-size: 1.8rem;}
 
 .body {
   
-
+    & > a,
+    & > ul > li > a,
+    & > ol > li > a,
+    & > ul > li > p > a,
+    & > ol > li > p > a,
+    & > p > a {
+        color:#5990ac;
+    }
 
     & > p {
         margin: 0;
@@ -120,14 +128,26 @@ img {
 .posts {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     margin: auto;
-
+  
     & > a {
+        background-color: #41414141;
+        border-radius: 5px;
+        margin: .5rem;
+        padding: .5rem;
         font-size: 2rem;
+        word-wrap: break-word;
+        text-align: center;
+  
+        transition: background-color 150ms ease-in-out;
     }
-
-}
+  
+    & > a:hover {
+      background-color: #4141417a;
+    }
+  
+  }
 
 .body > img {
     /* center the image wrt the screen*/
